--- a/shop.html
+++ b/shop.html
@@ -142,11 +142,12 @@
                             </div>
                             <div class="modal-body" style="padding: 3rem;">
                               <div class="row">
-                                <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                                <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                  style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                   <img src="./img/products/1.jpg" alt="" class="img-fluid">
                                 </div>
-                                <div class="col">
-                                  <h5 class="card-title text-md-start">
+                                <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
+                                  <h5 class="card-title text-md-start mb-3">
                                     Economy Dial Plunger Indicator
                                   </h5>
                                   <p class="card-text">
@@ -212,10 +213,11 @@
                             </div>
                             <div class="modal-body" style="padding: 3rem;">
                               <div class="row">
-                                <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                                <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                  style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                   <img src="./img/products/15.jpg" alt="" class="img-fluid">
                                 </div>
-                                <div class="col">
+                                <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                   <h5 class="card-title text-md-start">
                                     FLUKE-789 ProcessMeter
                                   </h5>
@@ -282,10 +284,11 @@
                             </div>
                             <div class="modal-body" style="padding: 3rem;">
                               <div class="row">
-                                <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                                <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                  style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                   <img src="./img/products/16.jpg" alt="" class="img-fluid">
                                 </div>
-                                <div class="col">
+                                <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                   <h5 class="card-title text-md-start">
                                     RS PRO TYPE K HEAVY DUTY THERMOCOUPLE
                                   </h5>
@@ -354,10 +357,11 @@
                             </div>
                             <div class="modal-body" style="padding: 3rem;">
                               <div class="row">
-                                <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                                <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                  style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                   <img src="./img/products/17.jpg" alt="" class="img-fluid">
                                 </div>
-                                <div class="col">
+                                <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                   <h5 class="card-title text-md-start">
                                     OGP Smartscope Measuring Machine
                                   </h5>
@@ -437,10 +441,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/18.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   STAINLESS BALL VALVE, 1" FERRULE, CLAMP CONNECTION BOTH ENDS
                                 </h5>
@@ -507,10 +512,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/19.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   DN25 PN16
                                 </h5>
@@ -576,10 +582,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/9.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   STAINLESS BALL VALVE, 1" FERRULE, CLAMP CONNECTION BOTH ENDS
                                 </h5>
@@ -644,10 +651,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/20.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   GATE VALVE 1 1/4"
                                 </h5>
@@ -718,10 +726,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/21.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   DOORSENSOR GLS-1
                                 </h5>
@@ -785,10 +794,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/22.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   PLC MODEL: Q312B BASE
                                 </h5>
@@ -851,10 +861,11 @@
                           </div>
                           <div class="modal-body" style="padding: 2rem;">
                             <div class="row">
-                              <div class="col me-4" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/12.jpg" alt="Product Image" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   KG AUTO 25mm Push Button Switch Set (DC/AC, Illuminated & Non-Illuminated)
                                 </h5>
@@ -917,10 +928,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/13.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   INVERTER FR-E720-0.2 SALZER 4" X 4
                                 </h5>
@@ -987,10 +999,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/11.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   SMC AMC520-04 EXHAUST CLEANER
                                 </h5>
@@ -1054,10 +1067,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/25.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   AIR FILTER REGULATOR, AC40B-A; 1/2" PORT SIZE; SMC
                                 </h5>
@@ -1119,10 +1133,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/26.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   FILTER REGULATOR, AW40-A; 1/2" PORT SIZE; SMC
                                 </h5>
@@ -1184,10 +1199,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/27.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   KOGANEI FREE JOINT CJL-12X1.25-109W
                                 </h5>
@@ -1265,10 +1281,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/10.jpg" alt="Product Image" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   SJ-1225-HA2
                                 </h5>
@@ -1334,10 +1351,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/6.jpg" alt="" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   LSE Lighting GPH303T5L/4P GPH303T5L/4 Ultraviolet UV Lamp Bulb 4-pin Base 12"
                                 </h5>
@@ -1402,10 +1420,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/23.jpg" alt="Product Image" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   MAGNETCONTACTOR LC1D12M7
                                 </h5>
@@ -1471,10 +1490,11 @@
                           </div>
                           <div class="modal-body" style="padding: 3rem;">
                             <div class="row">
-                              <div class="col me-5" style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
+                              <div class="col-md-6 col-lg-4 d-flex justify-content-center align-items-center"
+                                style="box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;">
                                 <img src="./img/products/24.jpg" alt="Product Image" class="img-fluid">
                               </div>
-                              <div class="col">
+                              <div class="col-md-6 col-lg-8 d-flex flex-column justify-content-center mt-4 mt-md-0">
                                 <h5 class="card-title text-md-start">
                                   MCCB GV2-ME06
                                 </h5>
