--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
     .text-align-end {
       text-align: end;
     }
+
+    /* button up scroll */
   </style>
 </head>
 
 <body>
+
+  <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
+
   <!-- header  -->
   <container>
     <div class="topbar">
@@ -361,6 +366,27 @@
     }
     function toggleMenu() {
       menuList.classList.toggle("active");
+    }
+  </script>
+
+  <script>
+    let mybutton = document.getElementById("myBtn");
+
+    window.onscroll = function () {
+      scrollFunction()
+    };
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
     }
   </script>
 
