--- a/shop.html
+++ b/shop.html
@@ -42,7 +42,7 @@
           </div>
           <div class="icon-text">
             <img src="./img/phone-call.png" alt="icon" />
-            <span class="span">+63 961 123 2546</span>
+            <span class="span">+1 624 622 8055</span>
           </div>
           <div class="icon-text">
             <img src="./img/time.png" alt="icon" />
@@ -1590,6 +1590,42 @@
         <p class="text-muted mt-5">© Copyright 2024, nacsinternational.com</p>
       </div>
   </footer>
+
+
+  <!-- end of line -->
+
+  <script>
+    function toggleMenu() {
+      menuList.classList.toggle("active");
+    }
+    function toggleMenu() {
+      menuList.classList.toggle("active");
+    }
+  </script>
+
+  <script>
+    let mybutton = document.getElementById("myBtn");
+
+    window.onscroll = function () {
+      scrollFunction()
+    };
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+  </script>
+
+
+
 
   <!-- Font awesome -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"
